checkout and orders and carts

--- a/saleor/checkout/templates/checkout/summary.html
+++ b/saleor/checkout/templates/checkout/summary.html
@@ -116,7 +116,7 @@
         <form method="post">
             {% csrf_token %}
             <p>
-                <button type="submit" class="btn btn-primary btn-lg pull-right">
+                <button type="submit" class="btn btn-lg btn-black btn-outlined pull-right">
                     {% trans "Place order" %}
                 </button>
             </p>
