--- a/saleor/static/scss/_app.scss
+++ b/saleor/static/scss/_app.scss
@@ -197,8 +197,10 @@ $icon-font-path: "../fonts/";
 
 
 .hero-unit {
-	background-image:url('../images/flowers_bg.jpg');
+	background-image: url('../images/flowers_bg.jpg');
   background-size:cover;
+  padding-top: 150px;
+  padding-bottom: 150px;
 }
 
 .white_bg {
@@ -211,4 +213,16 @@ $icon-font-path: "../fonts/";
 
 .navbar {
 	margin-bottom: 40px;
+}
+
+h1, h2, h3, h4, h5 {
+	font-family: "Montserrat";
+}
+
+hr.home {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
