--- a/saleor/static/scss/_app.scss
+++ b/saleor/static/scss/_app.scss
@@ -197,14 +197,29 @@ $icon-font-path: "../fonts/";
 
 
 .hero-unit {
-	background-image: url('../images/flowers_bg.jpg');
-  background-size:cover;
-  padding-top: 150px;
-  padding-bottom: 150px;
+	background-image: url('../images/hero-bg-top.jpg');
+	background-position: center center;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-.white_bg {
-	background-color: white;
+.hero-unit h1 {
+	font-family: 'Alex Brush', cursive;
+	font-size: 15em;
+	color: #e9785a;
+}
+
+.hero-unit p {
+	font-family: 'Slabo 27px', serif;
+	font-weight: 700;
+	color: #989898;
+	padding-left: 50px;
+	padding-right: 50px;
+	letter-spacing: 5px;
+}
+
+.hero-bg {
+	padding: 100px;
 }
 
 .jumbotron {
@@ -225,4 +240,25 @@ hr.home {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
     margin-top: 100px;
     margin-bottom: 100px;
+}
+
+.footer {
+	background-image: url('../images/hero-bg-bot.jpg');
+  background-position: center center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  border-top: 20px solid #101010;
+}
+
+.footer table {
+	background-color: #fdfaf5;
+}
+
+.footer table {
+	font-size: 1.25em;
+}
+
+.footer p {
+	padding: 10px;
+	background-color: #fdfaf5;
 }
